# ChasmX

./: .coverage  .gitignore  CLAUDE.md  DATABASE_SETUP_GUIDE.md  EMAIL_AUTOMATION_GUIDE.md  HOMEPAGE_REDESIGN.md  README.md  TEAM_README.md  UI_ENHANCEMENT_SUMMARY.md  UI_REBUILD_STATUS.md  WORKFLOW_BUILDER_ENHANCEMENTS.md  WORKFLOW_BUILDER_FEATURES.md  WORKFLOW_BUILDER_GUIDE.md  docker-compose.yml  package-lock.json  package.json  requirements.txt  run.py  start_backend.bat  start_backend.sh  test_app.py
backend/: .dockerignore  .env  .env.example  .env.template  .gitignore  Dockerfile  EMAIL_WEBHOOK_IMPLEMENTATION.md  README.md  REAL_EMAIL_WEBHOOK_IMPLEMENTATION_SUMMARY.md  pyproject.toml  pytest.ini  requirements.txt  run.py  simple_email_webhook_test.py  standalone_email_webhook_test.py  test_auth_flow.py  test_communication.py  test_email_webhook_implementation.py  test_real_implementation.py  test_redis_connection.py
backend/app/: .env  main.py  requirements.txt
backend/backend.egg-info/: PKG-INFO  SOURCES.txt
backend/docs/: AI_SYSTEM_README.md  AI_SYSTEM_STRUCTURE.md  IMPLEMENTATION_SUMMARY.md  QUICK_REFERENCE.md  VERTICAL_LAYOUT_IMPLEMENTATION.md  WORKFLOW_EXECUTION_GUIDE.md
backend/example_workflows/: 01_simple_qa.json  02_collaborative_etl.json  03_content_creation_team.json  04_pubsub_collaborative_qa.json  05_email_webhook_demo.json  README.md
backend/scripts/: example_agent_usage.py
backend/tests/: __init__.py  conftest.py  test_ai_services.py  test_auth.py  test_crud.py  test_database.py  test_deps.py  test_email_webhook_nodes.py  test_jwt.py  (+7 more)
(+179 files in other folders)
